docs: move the detail out of the readme into use.md